# schedule1

./: .gitignore  CNAME  Cargo.toml  flake.nix
.github/workflows/: build.yml
assets/: tailwind.css
src/: main.rs  sellable.rs
src/components/: base_products.rs  button.rs  icon_button.rs  mix_map.rs  mix_options.rs  mix_stats.rs  mod.rs  price_per_unit.rs  psudo_options.rs  save_product.rs  soil_options.rs  yield_options.rs
