[package]
name = "schedule1"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dioxus-free-icons = { version = "0.9.0", features = ["octicons"] }
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "CanvasRenderingContext2d"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
